--- a/dyngraph.html
+++ b/dyngraph.html
@@ -15,12 +15,10 @@
 	  function config() {
 	      fill_in_colours();
 	      tracer.dispatchEvent(new Event('change'));
+	      labelling.dispatchEvent(new Event('change'));
 	      document.getElementById("sel_shape").dispatchEvent(new Event("change"));
 	      update_inp_vals();
 	      update_node_params();
-	      inp_vals_map.sz_canvas.dispatchEvent(new Event('change'));
-	      inp_vals_map.wd_line.dispatchEvent(new Event('change'));
-	      inp_vals_map.nu_alpha.dispatchEvent(new Event("change"));
 	  }
 	  function fill_in_colours() {
 	      for (let it in col_sels)
@@ -111,6 +109,11 @@
 	  .column {
 	      float: left;
 	      padding: 1vw;
+	  }
+	  .top {
+	      margin-left: auto;
+	      margin-right: auto;
+	      vertical-align: middle;
 	  }
 	  .centred {
 	      margin-left: auto;
@@ -270,8 +273,20 @@
 	      </td>
 	    </tr>
 	    <tr>
-	      <td><label title="Ctrl+Alt+T">Tracing: <input id="cb_tracing" class="cb" type="checkbox" checked></label></td>
-	      <td><input type="button" title="Ctrl+Alt+R" class="button1" id="btn_refresh_colours" onClick="refresh_colours();" value="Refresh Colours" /></td>
+	      <td><table>
+		  <tr>
+		    <td><label title="Ctrl+Alt+T">Tracing:</label></td>
+		    <td><input id="cb_tracing" class="cb" type="checkbox" checked></td>
+		  </tr>
+		  <tr>
+		    <td><label title="Ctrl+Alt+L">Labels:</label></td>
+		    <td><input id="cb_labels" class="cb" type="checkbox"></td>
+		  </tr>
+	      </table></td>
+	      <td><table>
+		  <tr><td><input type="button" title="Ctrl+Alt+R" class="button1" id="btn_refresh_colours" onClick="refresh_colours();" value="Refresh Colours" /></td></tr>
+		  <tr><td><label style="visibility: hidden;">placeholder</label></td></tr>
+	      </table></td>
 	    </tr>
 	    <tr>
 	      <td><label>Output file:</label></td>
@@ -381,6 +396,7 @@
       <script type="text/javascript">
 	const canv = document.getElementById("cv_canv")
 	const c2d = canv.getContext("2d");
+	c2d.font = '48px sansserif';
 	const inp_vals = {
 	    sz_canvas:  1000,
 	    nu_nodes:    100,
@@ -415,14 +431,15 @@
 		inp_vals_map[a_val].value = inp_vals[a_val];
 	    }
 	    inp_vals_map.sz_canvas.addEventListener("change",function() {resize_canvas(this.value);});
-	    //inp_vals_map.inp_nodesize0.addEventListener("change",function() {resize_nodes(Number(this.value));});
 	    inp_vals_map.wd_line.addEventListener("change",function() {resize_linewidth(Number(this.value));});
 	    inp_vals_map.nu_scatter.addEventListener("change",function(){update_scatter(this.value)});
 	    inp_vals_map.nu_alpha.addEventListener("change",function(){update_alpha(this.value)});
 	}
 	function update_inp_vals() {
-	    for (let a_val in inp_vals)
+	    for (let a_val in inp_vals) {
 		inp_vals_map[a_val].value = inp_vals[a_val];
+		inp_vals_map[a_val].dispatchEvent(new Event('change'));
+	    }
 	}
 
 	function save_to_inp_vals() {
@@ -431,8 +448,10 @@
 	}
 	
 	const tracer = document.getElementById("cb_tracing");
-	tracer.addEventListener("change",function() { check_tracer(); });
-
+	tracer.addEventListener("change",function() { check_tracer(this); });
+	const labelling =  document.getElementById('cb_labels');
+	labelling.addEventListener("change",function() { check_labelling(this); });
+	
 	const btn_start = document.getElementById("btn_start");
 	const btn_pause_conti = document.getElementById("btn_pause_conti");
 	btn_pause_conti.addEventListener("click",function(){
@@ -497,15 +516,17 @@
 	    const contents = JSON.parse( decodeURIComponent( ev.target.result ) );
 	    //console.log(contents);
 	    infn.value = "";
-	    for(let a_key in inp_vals)
-		inp_vals_map[a_key].value = contents.inp_vals[a_key];
+	    for(let a_key in inp_vals) {
+		inp_vals[a_key] = Number(contents.inp_vals[a_key]);
+		inp_vals_map[a_key].value = Number(contents.inp_vals[a_key]);
+	    }
 	    load_cols(contents.colours);
 	    for(let a_key in node_params) {
-		node_params[a_key] = contents.node_params[a_key];
-		map_node_params[a_key][0].value = contents.node_params[a_key];
+		node_params[a_key] = Number(contents.node_params[a_key]);
+		map_node_params[a_key][0].value = Number(contents.node_params[a_key]);
 	    }
 	    for(let a_key in node_size) {
-		node_size[a_key] = contents.node_size[a_key];
+		node_size[a_key] = Number(contents.node_size[a_key]);
 	    }
 	    node_shape = contents.node_shape;
 	    sync_back_shape_selection("sel_shape");
@@ -513,6 +534,8 @@
 	    sel_graphalg.dispatchEvent(new Event("change"));
 	    tracer.checked = contents.tracing;
 	    tracer.dispatchEvent(new Event("change"));
+	    labelling.checked = contents.labelling;
+	    labelling.dispatchEvent(new Event("change"));
 	    config();
 	    restart();
 	};
@@ -544,11 +567,18 @@
 	    let hiddenElement = document.createElement('a');
 	    const out_val = {};
 	    save_to_inp_vals();
-	    out_val.inp_vals = inp_vals;
+	    out_val.inp_vals = {};
+	    for(let a_key in inp_vals)
+		out_val.inp_vals[a_key] = Number(inp_vals[a_key]);
 	    out_val.colours = colours;
-	    out_val.node_params = node_params;
-	    out_val.node_size = node_size;
+	    out_val.node_params = {};
+	    for(let a_key in node_params)
+		out_val.node_params[a_key] = Number(node_params[a_key]);
+	    out_val.node_size = {};
+	    for(let a_key in node_size)
+		out_val.node_size[a_key] = Number(node_size[a_key]);
 	    out_val.tracing = tracer.checked;
+	    out_val.labelling = labelling.checked;
 	    out_val.node_shape = node_shape;
 	    out_val.graphalg_index = sel_graphalg.selectedIndex;
 	    
