label offset has been added

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -313,7 +313,7 @@
 	    <tr>
 	      <td colspan="2"><input type="file" id="infilename"></td>
 	    </tr>
-	    <tr><td colspan="2" class="centred"><label>Physics Parameters</label></td></tr>
+	    <tr><td colspan="2" class="centred"><label>Misc Parameters</label></td></tr>
 	    <tr>
 	      <td colspan="2">
 		<table>
@@ -351,6 +351,16 @@
 		    <td>Nudge size</td>
 		    <td><input type="range" min="1" max="20" step="1" class="slider" id="slider_nudge_size")></td>
 		    <td class="right"><span id="span_nudge_size"></span></td>
+		  </tr>
+		  <tr>
+		    <td>Label Offset (x)</td>
+		    <td><input type="range" min="-50" max="50" step="1" class="slider" id="slider_label_offset_x")></td>
+		    <td class="right"><span id="span_label_offset_x"></span></td>
+		  </tr>
+		  <tr>
+		    <td>Label Offset (y)</td>
+		    <td><input type="range" min="-50" max="50" step="1" class="slider" id="slider_label_offset_y")></td>
+		    <td class="right"><span id="span_label_offset_y"></span></td>
 		  </tr>
 		</table>
 	      </td>
