background colour is settable

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -238,6 +238,12 @@
 		    <th>off</th>
 		  </tr>
 		  <tr>
+		    <td><label>background</label></td>
+		    <td class="centred"><input id="back_colour" type="color" /></td>
+		    <td class="centred"><input id="rnd_back_colour" class="cb" type="checkbox" hidden></td>
+		    <td class="centred"><input id="back_colour_off" class="cb" type="checkbox"></td>
+		  </tr>
+		  <tr>
 		    <td><label>fill</label></td>
 		    <td class="centred"><input id="fill_colour" type="color" /></td>
 		    <td class="centred"><input id="rnd_fill_colour" class="cb" type="checkbox" /></td>
@@ -265,19 +271,19 @@
 		    <td><label>trace fill</label></td>
 		    <td class="centred"><input id="trc_fil_col" type="color" /></td>
 		    <td class="centred"><input id="rnd_trc_fil_col" class="cb" type="checkbox" /></td>
-		    <td class="centred"><input id="trc_fil_col_off" class="cb" type="checkbox" disabled></td>
+		    <td class="centred"><input id="trc_fil_col_off" class="cb" type="checkbox" hidden></td>
 		  </tr>
 		  <tr>
 		    <td><label>trace outl.</label></td>
 		    <td class="centred"><input id="trc_oli_col" type="color" /></td>
 		    <td class="centred"><input id="rnd_trc_oli_col" class="cb" type="checkbox" /></td>
-		    <td class="centred"><input id="trc_oli_col_off" class="cb" type="checkbox" disabled></td>
+		    <td class="centred"><input id="trc_oli_col_off" class="cb" type="checkbox" hidden></td>
 		  </tr>
 		  <tr>
 		    <td><label>trace line</label></td>
 		    <td class="centred"><input id="trc_lin_col" type="color" /></td>
 		    <td class="centred"><input id="rnd_trc_lin_col" class="cb" type="checkbox"></td>
-		    <td class="centred"><input id="trc_lin_col_off" class="cb" type="checkbox" disabled></td>
+		    <td class="centred"><input id="trc_lin_col_off" class="cb" type="checkbox" hidden></td>
 		  </tr>
 		</table>
 	      </td>
