--- a/dyngraph.html
+++ b/dyngraph.html
@@ -77,9 +77,10 @@
 	      }
 	      set_graph_alg(seli);
 	  }
-	  function resize_canvas(sz) {
-	      canv.width = sz;
-	      canv.height = sz;
+	  function resize_canvas(w,h) {
+	      //console.log("received:"+w+h);
+	      canv.width = w;
+	      canv.height = h;
 	      update_scatter(inp_vals_map.nu_scatter.value);
 	  }
 	</script>
@@ -185,7 +186,7 @@
 	  <table id="tbl_shape">
 	    <tr>
 	      <td class="button1"><label>canvas</label></td>
-	      <td><input title="size of the canvas (in screen pixels)" id="sz_canvas" type="number" min="100" max="8192" /></td>
+	      <td><input title="size of the canvas (in screen pixels)" id="sz_canvas_w" type="number" min="100" max="8192" /><input title="size of the canvas (in screen pixels)" id="sz_canvas_h" type="number" min="100" max="8192" /></td>
 	    </tr>
 	    <tr>
 	      <td><label>edges</label></td>
@@ -430,7 +431,8 @@
 	const canv = document.getElementById("cv_canv")
 	const c2d = canv.getContext("2d");
 	const inp_vals = {
-	    sz_canvas:  1000,
+	    sz_canvas_w:  1000,
+	    sz_canvas_h:  1000,
 	    sz_font:      12, 
 	    nu_nodes:    100,
 	    nu_edges:    100,
@@ -538,9 +540,15 @@
 		inp_vals_map[a_val] = document.getElementById(a_val);
 		inp_vals_map[a_val].value = inp_vals[a_val];
 	    }
-	    inp_vals_map.sz_canvas.addEventListener("change",function() {
-		resize_canvas(this.value);
-		inp_vals.sz_canvas = this.value;
+	    inp_vals_map.sz_canvas_w.addEventListener("change",function() {
+		resize_canvas(this.value,inp_vals.sz_canvas_h);
+		inp_vals.sz_canvas_w = this.value;
+		inp_vals_map.sz_font.dispatchEvent(new Event('change'));
+		inp_vals_map.wd_line.dispatchEvent(new Event('change'));
+	    });
+	    inp_vals_map.sz_canvas_h.addEventListener("change",function() {
+		resize_canvas(inp_vals.sz_canvas_w,this.value);
+		inp_vals.sz_canvas_h = this.value;
 		inp_vals_map.sz_font.dispatchEvent(new Event('change'));
 		inp_vals_map.wd_line.dispatchEvent(new Event('change'));
 	    });
