scat and offs x and y breakup

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -355,6 +355,16 @@
 		    <td class="right"><span id="span_dist_threshold"></span></td>
 		  </tr>
 		  <tr>
+		    <td>fx Multiplier</td>
+		    <td><input type="range" min="0" max="10" step="1" class="slider" id="slider_fx_multip")></td>
+		    <td class="right"><span id="span_fx_multip"></span></td>
+		  </tr>
+		  <tr>
+		    <td>fy Multiplier</td>
+		    <td><input type="range" min="0" max="10" step="1" class="slider" id="slider_fy_multip")></td>
+		    <td class="right"><span id="span_fy_multip"></span></td>
+		  </tr>
+		  <tr>
 		    <td>Nudge size</td>
 		    <td><input type="range" min="1" max="20" step="1" class="slider" id="slider_nudge_size")></td>
 		    <td class="right"><span id="span_nudge_size"></span></td>
