X shaped placement has been added

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -405,6 +405,7 @@
 		  <option value="hline">Horizontal Line</option>
 		  <option value="vline">Vertical Line</option>
 		  <option value="lrdiagonal">Diagonal</option>
+		  <option value="x">X-shaped</option>
 	      </select></td>
 	    </tr>
 	    <tr><td colspan="2" class="centred"><label>Edge List</label></td></tr>
