--- a/dyngraph.html
+++ b/dyngraph.html
@@ -427,6 +427,7 @@
 		  <option value="vline">Vertical Line</option>
 		  <option value="lrdiagonal">Diagonal</option>
 		  <option value="x">X-shaped</option>
+		  <option value="o">Circular</option>
 	      </select></td>
 	    </tr>
 	    <tr><td colspan="2" class="centred"><label>Edge List</label></td></tr>
