islands can be connected

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -467,6 +467,10 @@
 	    <tr>
 	      <td><input type="button" title="した (Ctrl+Shift+DownArrow)" id="btn_down" onClick="nudge('down');" value="下" /></td>
 	    </tr>
+	    <tr>
+	      <td><input type="button" id="btn_island_connect" onClick="connect_islands();" value="Connect Islands" /></td>
+	      <td></td>
+	    </tr>
 	  </table>
 	</div>
       </div>
