bug fix + colour groups only without connection

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -473,7 +473,7 @@
 	      <td><input type="button" title="した (Ctrl+Shift+DownArrow)" id="btn_down" onClick="nudge('down');" value="下" /></td>
 	    </tr>
 	    <tr>
-	      <td><input type="button" id="btn_island_connect" onClick="connect_islands();" value="Connect Islands" /> <label>starting with colour </label><select class="button1" id="sel_starting_safe_colour"></select></td>
+	      <td><label><input type="button" id="btn_discover_groups" onClick="reset_safe_colour_index();discover_node_groups();" value="Colour Groups" /> or <input type="button" id="btn_connect_groups" onClick="reset_safe_colour_index();connect_node_groups();" value="Connect Groups" /> starting with colour </label><select class="button1" id="sel_starting_safe_colour"></select></td>
 	      <td></td>
 	    </tr>
 	    <tr>
