selected colour code and index number to console.log

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -473,7 +473,7 @@
 	      <td><input type="button" title="した (Ctrl+Shift+DownArrow)" id="btn_down" onClick="nudge('down');" value="下" /></td>
 	    </tr>
 	    <tr>
-	      <td><label><input type="button" id="btn_discover_groups" onClick="reset_safe_colour_index();discover_node_groups();" value="Colour Groups" /> or <input type="button" id="btn_connect_groups" onClick="reset_safe_colour_index();connect_node_groups();" value="Connect Groups" /> starting with colour </label><select class="button1" id="sel_starting_safe_colour"></select></td>
+	      <td><label><input type="button" id="btn_discover_groups" onClick="reset_safe_colour_index();discover_node_groups();" value="Colour Groups" /> or <input type="button" id="btn_connect_groups" onClick="reset_safe_colour_index();connect_node_groups();" value="Connect Groups" /> starting with colour </label><select class="button1" id="sel_starting_safe_colour" onChange="console.log(this.selectedIndex + ': ' + this[this.selectedIndex].text)"></select></td>
 	      <td></td>
 	    </tr>
 	    <tr>
@@ -505,7 +505,7 @@
 	    const sel_box = document.getElementById("sel_starting_safe_colour");
 	    for(var i = 0, l = safe_colours.length; i < l; i++){
 		const option = safe_colours[i];
-		//                               text    value  selected
+		//                               text  value  selected
 		sel_box.options.add( new Option(option, option, false) );
 		sel_box.options[i].style.backgroundColor = "#" + option;
 	    }
